--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ python:
 
 install:
   - pip install -r requirements.txt
-script:
-  - python app-test.py
 
-after_success:
-   - "coveralls"
+script:
+  - python3 -m unittest
