--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ python:
   - "3.6"
 
 install:
-  - pip install -r requirements.txt
+  - "pip install -r requirements.txt"
+  - "pip install coveralls"
+
+before_script:
+  - psql -c 'create database diary;' -U postgres
+  - psql -c "create user mathias with password '1' createdb;" -U postgres
+  - python app/createdb.py
 
 script:
   - python3 -m unittest
