--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 before_script:
   - psql -c 'create database diary;' -U postgres
   - psql -c "create user mathias with password '1' createdb;" -U postgres
-  - python app/createdb.py
+  - python app/models.py
 
 script:
   - python3 -m unittest
