--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - "pip install coveralls"
 
 before_script:
-  - psql -c 'create database diary;' -U postgres
+  - psql -c 'create database travis;' -U postgres
   - psql -c "create user mathias with password '1' createdb;" -U postgres
   - python app/models.py
 
