--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ python:
 install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
-#
-#before_script:
-#  - psql -c 'create database travis;' -U postgres
+
+before_script:
+  - psql -c 'create database travis;' -U postgres
 #  - psql -c "create user mathias with password '1' createdb;" -U postgres
-#  - python app/models.py
+  - python app/models.py
 
 script:
   - python3 -m unittest
