--- a/requirements.txt
+++ b/requirements.txt
@@ -5,39 +5,71 @@ astroid==1.6.5
 atomicwrites==1.1.5
 attrs==18.1.0
 backports.functools-lru-cache==1.5
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
 configparser==3.5.0
 cryptography==2.1.4
 decorator==4.3.0
 enum34==1.1.6
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.6
+Flask-JWT-Extended==3.12.0
+flask-marshmallow==0.9.0
+Flask-Migrate==2.2.1
 Flask-RESTful==0.3.6
 flask-restful-swagger-2==0.35
 Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 funcsigs==1.0.2
+futures==3.2.0
 gunicorn==19.9.0
+gyp==0.1
+idna==2.6
+ipaddress==1.0.17
+isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
+keyring==10.6.0
+keyrings.alt==3.0
 lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.15.3
+marshmallow-sqlalchemy==0.14.0
+mccabe==0.6.1
 more-itertools==4.2.0
 passlib==1.7.1
 pluggy==0.6.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 py==1.5.4
+pycparser==2.18
 pycrypto==2.6.1
 pycurl==7.43.0.1
+pygobject==3.26.1
 PyJWT==1.6.4
+pyliblzma==0.5.3
 pylint==1.9.2
+pysqlite==1.0.1
 pytest==3.6.3
 python-dateutil==2.7.3
 python-dotenv==0.8.2
 python-editor==1.0.3
+pytz==2018.5
+pyxdg==0.25
+rpm==4.14.1
+SecretStorage==2.3.1
+singledispatch==3.4.0.3
+six==1.11.0
+SQLAlchemy==1.2.10
+sqlalchemy-migrate==0.7.2
+SQLAlchemy-Utils==0.33.3
 Tempita==0.5.2
+urlgrabber==3.10.2
 virtualenv==16.0.0
 Werkzeug==0.14.1
-pyjwt==1.6.4
-bcrypt==3.1.4
-flask-bcrypt==0.7.1
-flask-jwt-extended==3.12.0
+wrapt==1.10.11
+yum-metadata-parser==1.1.4
