--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: python
 
 python:
-  - "3.6"
-
-install:
-  - "pip install -r requirements.txt"
-  - "pip install coveralls"
+  - "3.6.5"
 
 before_script:
-  - psql -c 'create database travis;' -U postgres
-#  - psql -c "create user mathias with password '1' createdb;" -U postgres
-  - python app/models.py
+  - createdb testdb;
+
+install:
+  - pip install -r requirements.txt
 
 script:
   - python3 -m unittest
 
 after_success:
   - coveralls
+
+cache: pip
